--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
                 document.getElementById('pd').innerHTML = 
                 "<p><em>Name: " + buildings[0].properties.Name +
 				"<p><em>Grade: " + buildings[0].properties.GRADE +
-				"<p><em>" + buildings[0].properties.DESC1 +
-                "<p><em>" + buildings[0].properties.DESC2 +
-				"<p><em>" + buildings[0].properties.DESC3 +
-				"<p><em>" + buildings[0].properties.DESC4 +
-				"<p><em>" + buildings[0].properties.DESC5 +
+				"<p><em>" + buildings[0].properties.DESC1_1 +
+                "<p><em>" + buildings[0].properties.DESC2_1 +
+				"<p><em>" + buildings[0].properties.DESC3_1 +
+				"<p><em>" + buildings[0].properties.DESC4_1 +
+				"<p><em>" + buildings[0].properties.DESC5_1 +
 				"<p><em>" + buildings[0].properties.photo +
 				"</em></p>";
               } else {
