--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         margin-top: 0px;
         width: 400px;
       }
+	    <img src="https://files.slack.com/files-pri/TBRUQA2GP-FC8F09867/new_logo.png" height=100 style=’position:fixed;bottom:0px;left:0px;z-index:999’/>
   </style>
   </head>
 
