--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
       #features {
         top: 0;
-        height: 800px;
+        height: auto;
         margin-top: 0px;
-        width: 400px;
+        width: auto;
       }
 	  #demo{
     /* To play around, change this to absolute */
@@ -114,13 +114,13 @@
           map.on('load', function() {
 
             map.addLayer({
-              'id': 'Hypothetical_20180813-1j4zuk',
+              'id': 'Hypo_photo_desc_20180822-1n4nf0',
               'type': 'fill',
               'source': {
                 'type': 'vector',
-                'url': 'mapbox://pacoventry.09y3mcus'
+                'url': 'mapbox://pacoventry.8s5gjvmy'
               },
-              'source-layer': 'Hypothetical_20180813-1j4zuk',
+              'source-layer': 'Hypo_photo_desc_20180822-1n4nf0',
               'paint': {
                 'fill-color': 'rgba(72, 67, 45, 0)',
                 'fill-outline-color': 'rgba(0, 0, 0, 0)'
@@ -165,20 +165,13 @@
            // change info window on hover
             map.on('mousemove', function(e) {
               var buildings = map.queryRenderedFeatures(e.point, {
-                layers: ['Hypothetical_20180813-1j4zuk']
+                layers: ['Hypo_photo_desc_20180822-1n4nf0']
               });
 
               if (buildings.length > 0) {
                 document.getElementById('pd').innerHTML = 
-                "<p><em>Name: " + buildings[0].properties.Name +
-				"<p><em>Grade: " + buildings[0].properties.GRADE +
-				"<p><em>" + buildings[0].properties.DESC1_1 +
-                "<p><em>" + buildings[0].properties.DESC2_1 +
-				"<p><em>" + buildings[0].properties.DESC3_1 +
-				"<p><em>" + buildings[0].properties.DESC4_1 +
-				"<p><em>" + buildings[0].properties.DESC5_1 +
-				"<p><em>" + buildings[0].properties.photo +
-				"</em></p>";
+                "<p><em>" + buildings[0].properties.Desc_link +
+                "</em></p>";
               } else {
                 document.getElementById('pd').innerHTML = '<p>Hover over a neighborhood</p>';
               }
