--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@ text-decoration: none;
           [-78.857716, 33.7113756],
           [-98.857716, 53.7113756]
         ]);
-        // define layer names
-        var layers = ['A+', 'A', 'B+', 'B', 'B-', 'C+', 'C', 'C-', 'D'];
-        var colors = ['#295927', '#1B9842', '#98D265', '#C6E788', '#EBF7AB', '#FFEDAD', '#FECA81', '#F99E58', '#E85A3B', '#fff', '#fff'];  
+          // define layer names
+        var layers = ['A+', 'A', 'B+', 'B', 'B-', 'C+', 'C', 'C-', 'D', '<h4>MultiFamily Listings</h4>', '2-4 Units', '5+ units'];
+        var colors = ['#295927', '#1B9842', '#98D265', '#C6E788', '#EBF7AB', '#FFEDAD', '#FECA81', '#F99E58', '#E85A3B', '#fff', '#567C87' , '#857548'];
         // create legend
         for (i = 0; i < layers.length; i++) {
           var layer = layers[i];
