--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
         padding: 0px;
         margin: 0px;
 		}
-
-      .legend {
+  .legend {
         background-color: #fff;
         border-radius: 3px;
-        bottom: 250px;
+        bottom: 300px;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        font: 12px/20px Calibri;
+        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
         padding: 10px;
         position: absolute;
         right: 10px;
@@ -109,10 +108,9 @@
         padding: 10px;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
         line-height: 18px;
-        height: 225px;
+        height: 300px;
         margin-bottom: 40px;
         width: 100px;
-		font: Calibri
       }
 
       .legend-key {
@@ -121,7 +119,6 @@
         width: 10px;
         height: 10px;
         margin-right: 5px;
-      }
 	  
       .redirect {
         background-color: #3887be;
