--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   .legend {
         background-color: #fff;
         border-radius: 3px;
-        bottom: 350px;
+        bottom: 400px;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
         font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
         padding: 10px;
@@ -223,7 +223,7 @@ text-decoration: none;
           [-98.857716, 53.7113756]
         ]);
           // define layer names
-        var layers = ['A+', 'A', 'B+', 'B', 'B-', 'C+', 'C', 'C-', 'D', '<h4>MultiFamily Listings</h4>', '2-4 Units', '5+ units'];
+        var layers = ['A+', 'A', 'B+', 'B', 'B-', 'C+', 'C', 'C-', 'D', '<h4>MultiFamily Listings</h4>', 'Single Family', 'MultiFamily'];
         var colors = ['#295927', '#1B9842', '#98D265', '#C6E788', '#EBF7AB', '#FFEDAD', '#FECA81', '#F99E58', '#E85A3B', '#fff', '#567C87' , '#857548'];
         // create legend
         for (i = 0; i < layers.length; i++) {
