--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ text-decoration: none;
         ]);
           // define layer names
         var layers = ['A+', 'A', 'B+', 'B', 'B-', 'C+', 'C', 'C-', 'D', '<h4>MultiFamily Listings</h4>', 'Single Family', 'MultiFamily'];
-        var colors = ['#295927', '#1B9842', '#98D265', '#C6E788', '#EBF7AB', '#FFEDAD', '#FECA81', '#F99E58', '#E85A3B', '#fff', '#567C87' , '#857548'];
+        var colors = ['#295927', '#1B9842', '#98D265', '#C6E788', '#EBF7AB', '#FFEDAD', '#FECA81', '#F99E58', '#E85A3B', '#fff', '#857548' , '#567C87'];
         // create legend
         for (i = 0; i < layers.length; i++) {
           var layer = layers[i];
