--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ text-decoration: none;
         ]);
     // define layer names
         var layers = ['A+', 'A', 'B+', 'B', 'B-', 'C+', 'C', 'C-', 'D', '<h4>MultiFamily Listings</h4>', 'Single Family', 'MultiFamily'];
-        var colors = ['#295927', '#1B9842', '#98D265', '#C6E788', '#EBF7AB', '#FFEDAD', '#FECA81', '#F99E58', '#E85A3B', '#fff', '#857548' , '#567C87'];
+        var colors = ['#378b1d', '#25c736', '#d0f7c2', '#ffe9b4', '#ffd56e', '#ffa780', '#ff6f30', '#d64e2a', '#f83062', '#fff', '#857548' , '#567C87'];
         // create legend
         for (i = 0; i < layers.length; i++) {
           var layer = layers[i];
