--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@ text-decoration: none;
           [-98.857716, 53.7113756]
         ]);
     // define layer names
-        var layers = ['A+', 'A', 'B+', 'B', 'B-', 'C+', 'C', 'C-', 'D', '<h4>MultiFamily Listings</h4>', 'Single Family', 'MultiFamily'];
-        var colors = ['#378b1d', '#25c736', '#d0f7c2', '#ffe9b4', '#ffd56e', '#ffa780', '#ff6f30', '#d64e2a', '#f83062', '#fff', '#857548' , '#567C87'];
+        var layers = ['A+', 'A', 'A-', 'B+', 'B', 'B-', 'C+', 'C', 'C-', 'D', '<h4>MultiFamily Listings</h4>', 'Single Family', 'MultiFamily'];
+        var colors = ['#378b1d', '#25c736', '92df87ff', '#d0f7c2', '#ffe9b4', '#ffd56e', '#ffa780', '#ff6f30', '#d64e2a', '#f83062', '#fff', '#857548' , '#567C87'];
         // create legend
         for (i = 0; i < layers.length; i++) {
           var layer = layers[i];
