--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         padding: 10px;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
         line-height: 18px;
-        height: 325px;
+        height: 375px;
         margin-bottom: 40px;
         width: 100px;
       }
@@ -224,7 +224,7 @@ text-decoration: none;
     // define layer names
 	 // define layer names
         var layers = ['A+', 'A', 'A-', 'B+', 'B', 'B-', 'C+', 'C', 'C-', 'D', '<h4>MultiFamily Listings</h4>', 'Single Family', 'MultiFamily','<img src="https://www.dropbox.com/s/4svklnx5v8i5u9f/Paomedia-Small-N-Flat-Map-marker_rev.svg?raw=1" size=1600x1200&size_mode=3 size=1600x1200&size_mode=3" width="20px" height="20px"></img> Active Listing'];
-        var colors = ['#378b1d', '#25c736', '#cdfed6', '#d0f7c2', '#ffe9b4', '#ffd56e', '#ffa780', '#ff6f30', '#d64e2a', '#f83062', '#fff', '#857548' , '#567C87', '#fff', '#fff'];      
+        var colors = ['#378b1d', '#25c736', '#cdfed6', '#d0f7c2', '#ffe9b4', '#ffd56e', '#ffa780', '#ff6f30', '#d64e2a', '#f83062', '#fff', '#857548' , '#567C87', '#fff', ];      
 	      
         
 	      // create legend
